# Course-Management-Project

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
core/templates/: base.html
core/utils/: types.py
registrationmanagement/: admin.py  apps.py
registrationmanagement/forms/: __init__.py  auth_forms.py  course_forms.py
registrationmanagement/infrastructure/: __init__.py  course_registration_repo.py  course_repo.py  faculty_repo.py  student_repo.py  user_repo.py
registrationmanagement/infrastructure/types/: __init__.py
registrationmanagement/migrations/: 0001_initial.py  0002_alter_courseregistration_course_alter_user_role.py
registrationmanagement/models/: __init__.py  course_models.py  profile_models.py  registration_models.py  user_models.py
registrationmanagement/services/: __init__.py  auth_service.py  auth_services.py  course_registration_service.py  course_service.py
registrationmanagement/templates/registrationmanagement/: course_creation.html  faculty_dashboard.html  faculty_login.html  faculty_registration.html  home.html  student_dashboard.html  student_login.html  student_registration.html
registrationmanagement/urls/: urls.py
registrationmanagement/utils/: __init__.py  admin_builders.py  auth_response_message.py  course_registration_response_message.py  course_response_message.py  model_constants.py
registrationmanagement/utils/types/: __init__.py  course_registration_types.py  course_types.py  faculty_types.py  student_types.py  user_types.py
registrationmanagement/views/: __init__.py  auth_views.py  base_views.py  course_registration_views.py  course_views.py
