[tool.poetry]
name = "course-management-project"
version = "0.1.0"
description = ""
authors = ["ShyamSundhar1411 <clashwithchiefrpjyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.6"
pylint-django = "^2.6.1"
poetry-plugin-export = "^1.9.0"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.2.0"
yapf = "^0.43.0"
django-environ = "^0.12.0"
environ = "^1.0"
django = "^5.2"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}

[tool.flake8]
max-line-length = 88
max-complexity = 12
ignore = ["E402","E501","W503","D100","C901"]
exclude = "__init__.py"

[tool.pylint]
load-plugins = ["pylint_django"]
django-settings-module = "core.settings"

[tool.pylint.MESSAGE_CONTROL]
disable = """
    too-many-locals,
    line-too-long,
    abstract-method,
    no-member,
    missing-module-docstring,
    missing-class-docstring,
    too-many-ancestors,
    too-many-instance-attributes,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    missing-function-docstring,
    broad-exception-caught,
    protected-access,
    duplicate-code,
    return-in-init,
    wildcard-import,
    too-many-lines,
    no-name-in-module,
    too-many-return-statements,
    no-value-for-parameter,
    attribute-defined-outside-init
"""
enable = "useless-suppression"

[tool.pylint.REPORTS]
reports="no"

[tool.pylint.FORMAT]
max-line-length="88"

[tool.pylint.BASIC]
good-names = "_,i,e,setUp,tearDown,maxDiff"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["django", "environ", "phonenumber_field"]

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]



[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
